Fixes login mask issue on mobile

--- a/web/public/style/app.css
+++ b/web/public/style/app.css
@@ -44,7 +44,7 @@ form > * {
 }
 
 #containerSignIn {
-  padding: 120px;
+  padding: 4vh;
 }
 
 #containerSignedIn {
